--- a/index.html
+++ b/index.html
@@ -6,22 +6,27 @@
   <title>Alma y lino - Catálogo</title>
   <style>
     :root{--brand:#7a5a3c;--accent:#c89b6a;--muted:#666}
+    *{box-sizing:border-box}
     body{font-family:system-ui,Segoe UI,Roboto,Arial,Helvetica;max-width:1100px;margin:18px auto;padding:12px;color:#111;background:#fff}
-    header{display:flex;align-items:center;gap:12px;margin-bottom:20px}
+    header{display:flex;align-items:center;gap:12px;margin-bottom:18px}
     h1{margin:0;font-size:20px;color:var(--brand)}
     .brand-sub{color:var(--muted);font-size:13px}
     .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(240px,1fr));gap:14px}
-    .card{border:1px solid #eee;border-radius:8px;padding:12px;background:#fff}
+    .card{border:1px solid #eee;border-radius:8px;padding:12px;background:#fff;display:flex;flex-direction:column;height:100%}
     .thumb{width:100%;height:160px;object-fit:cover;border-radius:6px}
     .title{font-weight:600;margin:8px 0 4px}
     .price{color:var(--brand);font-weight:700}
-    .desc{color:var(--muted);font-size:13px;margin-top:8px}
+    .desc{color:var(--muted);font-size:13px;margin-top:8px;flex:1}
     .actions{display:flex;gap:8px;margin-top:10px}
-    .btn{flex:1;padding:8px;border-radius:6px;text-align:center;text-decoration:none;color:#fff;background:var(--brand);font-weight:600}
+    .btn{flex:1;padding:8px;border-radius:6px;text-align:center;text-decoration:none;color:#fff;background:var(--brand);font-weight:600;cursor:pointer;border:none}
     .btn.secondary{background:#444}
-    #adspace{margin:18px 0;padding:12px;border-radius:8px;background:#faf7f3;text-align:center;color:#666}
+    .cart-btn{position:fixed;right:16px;bottom:16px;background:var(--accent);color:#fff;padding:12px 14px;border-radius:999px;box-shadow:0 6px 18px rgba(0,0,0,.12);border:none;font-weight:700;cursor:pointer}
+    #cart-panel{position:fixed;right:16px;bottom:80px;width:320px;max-height:70vh;overflow:auto;background:#fff;border:1px solid #eee;border-radius:10px;padding:12px;box-shadow:0 8px 24px rgba(0,0,0,.12);display:none}
+    .cart-item{display:flex;gap:10px;align-items:center;border-bottom:1px dashed #eee;padding:8px 0}
+    .cart-item img{width:56px;height:44px;object-fit:cover;border-radius:6px}
+    .qty-controls{display:flex;gap:6px;align-items:center}
     footer{margin-top:18px;color:#666;font-size:13px;text-align:center}
-    @media (max-width:520px){.thumb{height:140px}}
+    @media (max-width:520px){#cart-panel{right:8px;left:8px;width:auto}}
   </style>
 </head>
 <body>
@@ -29,104 +34,210 @@
     <div style="width:52px;height:52px;border-radius:10px;background:linear-gradient(135deg,var(--brand),var(--accent));display:flex;align-items:center;justify-content:center;color:#fff;font-weight:700">AyL</div>
     <div>
       <h1>Alma y lino</h1>
-      <div class="brand-sub">Textiles artesanales · Calidad y diseño</div>
+      <div class="brand-sub">Textiles · Calidad accesible</div>
     </div>
   </header>
-
-  <div id="adspace">
-    <!-- ADSPACE: aquí irá publicidad o sponsor -->
-    Espacio de patrocinio / publicitario
-  </div>
 
   <main id="main">
     <section id="list" class="grid"></section>
   </main>
 
+  <button id="open-cart" class="cart-btn">Carrito (<span id="cart-count">0</span>)</button>
+
+  <div id="cart-panel" aria-hidden="true">
+    <h3 style="margin:0 0 8px">Tu pedido</h3>
+    <div id="cart-items"></div>
+    <div style="margin-top:10px;display:flex;justify-content:space-between;align-items:center">
+      <div><strong>Total:</strong> $<span id="cart-total">0</span></div>
+      <div style="display:flex;gap:8px">
+        <button id="clear-cart" class="btn secondary" style="padding:8px 10px">Vaciar</button>
+        <button id="send-order" class="btn">Enviar por WhatsApp</button>
+      </div>
+    </div>
+    <div style="margin-top:8px;font-size:12px;color:var(--muted)">Revisá tu mensaje antes de enviar.</div>
+  </div>
+
   <footer>
-    Catálogo en línea · Alma y lino · Actualizá data/products.json para cambiar el catálogo
+    Alma y lino · Para cambios editá data/products.json en el repo
   </footer>
 
   <script>
-    // REEMPLAZAR este valor con tu número de WhatsApp en formato internacional (sin +)
-    // Ejemplo Argentina: 5492264123456
+    // REEMPLAZAR por tu número real en formato internacional, sin +.
+    // Ejemplo: "5492264123456"
     const WHATSAPP_NUMBER = "549226XXXXXXX";
-    const mainList = document.getElementById('list');
+
+    const listEl = document.getElementById('list');
+    const cartBtn = document.getElementById('open-cart');
+    const cartPanel = document.getElementById('cart-panel');
+    const cartItemsEl = document.getElementById('cart-items');
+    const cartCountEl = document.getElementById('cart-count');
+    const cartTotalEl = document.getElementById('cart-total');
+    const clearCartBtn = document.getElementById('clear-cart');
+    const sendOrderBtn = document.getElementById('send-order');
+
+    let products = [];
+    let cart = JSON.parse(localStorage.getItem('ayl_cart') || '[]');
+
+    function saveCart(){ localStorage.setItem('ayl_cart', JSON.stringify(cart)); renderCart(); }
 
     async function fetchProducts(){
       try{
         const r = await fetch('data/products.json');
         if(!r.ok) throw new Error('No data');
-        return await r.json();
+        products = await r.json();
+        render(products);
       }catch(e){
-        mainList.innerHTML = '<p>Error cargando productos. Subí data/products.json y probá de nuevo.</p>';
-        return [];
+        listEl.innerHTML = '<p>Error cargando productos. Subí data/products.json y probá de nuevo.</p>';
       }
     }
 
-    function createWhatsAppLink(product){
-      const text = encodeURIComponent(
-        `Hola, quiero pedir:%0A- Producto: ${product.title}%0A- SKU: ${product.id}%0A- Precio: ${product.price}%0A- Cantidad: `
-      );
-      return `https://wa.me/${WHATSAPP_NUMBER}?text=${text}`;
+    function money(n){ return Number(n||0).toLocaleString('de-DE'); }
+
+    function addToCart(id){
+      const p = products.find(x => x.id === id);
+      if(!p) return;
+      const item = cart.find(c => c.id === id);
+      if(item) item.qty++;
+      else cart.push({id: p.id, title: p.title, price: Number(p.price), qty:1, img: (p.images && p.images[0]) || null});
+      saveCart();
+    }
+
+    function removeFromCart(id){
+      cart = cart.filter(c => c.id !== id);
+      saveCart();
+    }
+
+    function changeQty(id, delta){
+      const it = cart.find(c => c.id === id);
+      if(!it) return;
+      it.qty = Math.max(1, it.qty + delta);
+      saveCart();
     }
 
     function render(products){
-      if(!products.length){
-        mainList.innerHTML = '<p>No hay productos publicados.</p>';
-        return;
-      }
-      mainList.innerHTML = '';
+      if(!products.length){ listEl.innerHTML = '<p>No hay productos publicados.</p>'; return; }
+      listEl.innerHTML = '';
       products.forEach(p => {
         const card = document.createElement('article');
         card.className = 'card';
-        const img = p.images && p.images.length ? `<img class="thumb" src="${p.images[0]}" alt="${p.title}">` : `<div style="height:160px;background:#f7f4f1;border-radius:6px;display:flex;align-items:center;justify-content:center;color:#999">Sin imagen</div>`;
+        const imgHtml = p.images && p.images.length ? `<img class="thumb" src="${p.images[0]}" alt="${p.title}">` : `<div style="height:160px;background:#f7f4f1;border-radius:6px;display:flex;align-items:center;justify-content:center;color:#999">Sin imagen</div>`;
         card.innerHTML = `
-          ${img}
+          ${imgHtml}
           <div class="title">${p.title}</div>
-          <div class="price">$ ${p.price}</div>
+          <div class="price">$ ${money(p.price)}</div>
           <div class="desc">${p.short || ''}</div>
           <div class="actions">
-            <a class="btn" href="${createWhatsAppLink(p)}" target="_blank" rel="noopener">Pedir por WhatsApp</a>
+            <button class="btn add-btn" data-id="${p.id}">Agregar</button>
             <a class="btn secondary" href="?id=${encodeURIComponent(p.id)}">Ver</a>
           </div>
         `;
-        mainList.appendChild(card);
+        listEl.appendChild(card);
       });
+
+      document.querySelectorAll('.add-btn').forEach(b => b.addEventListener('click', e => {
+        addToCart(e.currentTarget.dataset.id);
+      }));
     }
 
+    function renderCart(){
+      cartItemsEl.innerHTML = '';
+      let total = 0;
+      cart.forEach(item => {
+        total += item.price * item.qty;
+        const div = document.createElement('div');
+        div.className = 'cart-item';
+        div.innerHTML = `
+          ${item.img ? `<img src="${item.img}" alt="${item.title}">` : `<div style="width:56px;height:44px;background:#f7f4f1;border-radius:6px;display:flex;align-items:center;justify-content:center;color:#999;font-size:12px">Sin imagen</div>`}
+          <div style="flex:1">
+            <div style="font-weight:600">${item.title}</div>
+            <div style="color:var(--muted);font-size:13px">$ ${money(item.price)} c/u</div>
+            <div style="margin-top:6px;display:flex;align-items:center;gap:8px">
+              <div class="qty-controls">
+                <button data-id="${item.id}" class="btn secondary dec" style="padding:4px 8px">-</button>
+                <span style="display:inline-block;padding:0 8px">${item.qty}</span>
+                <button data-id="${item.id}" class="btn secondary inc" style="padding:4px 8px">+</button>
+              </div>
+              <button data-id="${item.id}" class="btn secondary remove" style="padding:6px 8px">Eliminar</button>
+            </div>
+          </div>
+        `;
+        cartItemsEl.appendChild(div);
+      });
+      cartCountEl.textContent = cart.reduce((s,i)=>s+i.qty,0);
+      cartTotalEl.textContent = Math.round(total);
+      // attach events
+      document.querySelectorAll('.dec').forEach(b=>b.addEventListener('click',e=>{ changeQty(e.currentTarget.dataset.id,-1); }));
+      document.querySelectorAll('.inc').forEach(b=>b.addEventListener('click',e=>{ changeQty(e.currentTarget.dataset.id,1); }));
+      document.querySelectorAll('.remove').forEach(b=>b.addEventListener('click',e=>{ removeFromCart(e.currentTarget.dataset.id); }));
+      // show/hide panel
+      cartPanel.style.display = cart.length ? 'block' : 'none';
+      cartPanel.setAttribute('aria-hidden', cart.length? 'false' : 'true');
+    }
+
+    cartBtn.addEventListener('click', ()=>{
+      // toggle
+      cartPanel.style.display = cartPanel.style.display === 'block' ? 'none' : 'block';
+      cartPanel.setAttribute('aria-hidden', cartPanel.style.display === 'block' ? 'false' : 'true');
+    });
+
+    clearCartBtn.addEventListener('click', ()=>{
+      cart = []; saveCart();
+    });
+
+    sendOrderBtn.addEventListener('click', ()=>{
+      if(!cart.length) { alert('El carrito está vacío.'); return; }
+      // build message
+      let msg = `Pedido desde Alma y lino:%0A`;
+      let total = 0;
+      cart.forEach(it=>{
+        const subtotal = it.price * it.qty;
+        total += subtotal;
+        msg += `- ${it.qty} x ${it.title} • $${it.price} c/u • $${subtotal}%0A`;
+      });
+      msg += `%0ATotal: $${Math.round(total)}%0A%0ADatos de contacto:%0ANombre:%0ATeléfono:%0ADirección:%0AObservaciones:`;
+      const url = `https://wa.me/${WHATSAPP_NUMBER}?text=${msg}`;
+      window.open(url, '_blank');
+    });
+
+    // detail view support
     function renderDetail(product){
       document.body.scrollTop = document.documentElement.scrollTop = 0;
+      const main = document.getElementById('main');
       const element = document.createElement('div');
       element.innerHTML = `
         <a href="/" style="display:inline-block;margin-bottom:12px;color:var(--brand);text-decoration:none;">← Volver</a>
         <article class="card" style="padding:18px">
           ${product.images && product.images.length ? `<img class="thumb" src="${product.images[0]}" alt="${product.title}">` : ''}
           <h2 class="title" style="margin-top:12px">${product.title}</h2>
-          <div class="price">$ ${product.price}</div>
-          <div style="color:var(--muted);margin-top:8px">SKU: ${product.id} ${product.stock ? '• Stock: ' + product.stock : ''}</div>
+          <div class="price">$ ${money(product.price)}</div>
+          <div style="color:var(--muted);margin-top:8px">${product.short || ''}</div>
           <p style="margin-top:12px">${product.description || ''}</p>
           <div class="actions" style="margin-top:14px">
-            <a class="btn" href="${createWhatsAppLink(product)}" target="_blank" rel="noopener">Pedir por WhatsApp</a>
+            <button class="btn" id="add-detail">Agregar al carrito</button>
             <a class="btn secondary" href="/">Volver al catálogo</a>
           </div>
         </article>
       `;
-      const main = document.getElementById('main');
       main.innerHTML = '';
       main.appendChild(element);
+      document.getElementById('add-detail').addEventListener('click', ()=>{
+        addToCart(product.id);
+        alert('Agregado al carrito');
+      });
     }
 
     (async function(){
-      const products = await fetchProducts();
+      await fetchProducts();
       const params = new URLSearchParams(location.search);
       const id = params.get('id');
       if(id){
         const found = products.find(p => p.id === id);
-        if(found) return renderDetail(found);
+        if(found) renderDetail(found);
         else location.href = '/';
       } else {
         render(products);
       }
+      renderCart();
     })();
   </script>
 </body>
